--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -76,6 +76,7 @@ set(TESTS_CPPS
     risc_v/riscv_register/t/unit_test.cpp
     risc_v/t/unit_test.cpp
     risc_v/t/riscv64_test.cpp
+    modules/decode/bypass/t/unit_test.cpp
     modules/fetch/bpu/t/unit_test.cpp
     func_sim/t/unit_test.cpp
     modules/core/t/unit_test.cpp
